# caldavsync

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  README.md  adopt.py  backup_caldav.py  caldav_client.py  config.example.yaml  config_loader.py  docker-compose.yml  google_client.py  ical_convert.py  link_events.py  list_caldav.py  list_calendars.py  main.py  mappings.py  pyproject.toml  requirements.txt  review.py  setup_wizard.py  sync_db.py  sync_engine.py  test_phase2.py  test_phase3.py
.github/: FUNDING.yml
